# Microsoft_Graph_App

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  project_tasks_detailed_report.csv  pyproject.toml  requirements.txt  run.py
src/: config.py  main.py
src/routers/: notifications.py
src/schemas/: notifications.py
src/services/: __init__.py  graph_service.py  mail_notification_service.py  payment_notification_service.py
